fix mobile layout css to avoid horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  overflow: hidden;
+}
+
 .container {
   font-family: "Comic Neue", cursive;
 }
